package com.champ.healthcare.Appointment.Domain;

public enum AppointmentStatus {
    REQUESTED,
    COMPLETED,
    CANCELLED,
    CONFIRMED,
    IN_PROGRESS
}
