package com.champ.healthcare.Appointment.Domain;

public enum NoteType {
    CONSULTATION,
    FOLLOW_UP,
    PRESCRIPTION
}
