package com.champ.healthcare.ClinicRoom.Domain;

public enum ClinicRoomStatus {
    AVAILABLE,
    OUT_OF_SERVICE
}