package com.champ.healthcare.Doctor.Domain;

public enum LicenseStatus {
    VALID,
    SUSPENDED,
    EXPIRED
}
