package com.champ.healthcare.Patient.Domain;

public enum BloodType {
    A,
    B,
    AB,
    O
}