package com.champ.healthcare.Patient.Domain;

public enum PatientStatus {
    ACTIVE,
    INACTIVE
}